# otto

./: .gitignore  .pre-commit-config.yaml  CONVENTION.md  DEBT.md  README.md  package.json  pyproject.toml
.github/helper/: install.sh
.github/workflows/: main.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  augment.d.ts  common.ts  globals.ts  main.ts  router.ts  shortcuts.ts  socket.ts  style.css  types.ts  utils.ts
frontend/src/client/: README.md  api.ts  call.ts  framework.bak.ts  framework.ts  generated.types.ts  index.ts  meta.types.ts  store.ts  types.ts  utils.ts  watcher.ts
frontend/src/client/__tests__/: api.test.ts  call.test.ts  framework.test.ts  setup.ts  store.test.ts  types.test.ts  utils.ts
frontend/src/client/framework/: index.ts  types.ts
frontend/src/components/: format.ts  store.ts  utils.ts
frontend/src/components/fui/: .gitignore  ErrorMessage.vue  Icon.vue  README.md  TextInput.vue  types.ts  utils.ts
frontend/src/components/pages/: Desktop.vue  Login.vue
frontend/src/components/svg/: Logo.vue  LogoThickLine.vue
frontend/src/components/ui/: Ellipsis.vue  Header.vue  IndicatorDot.vue  TextLoadingIndicator.vue
frontend/tailwind/: README.md  colors.js  colors.json  plugin.js
otto/: __init__.py  hooks.py  patches.txt
otto/api/: __init__.py  chat.py  client_test.py  dummy.py  permissions.py  session_view.py  types.py  utils.py
otto/assistants/: README.md  __init__.py  types.py  utils.py
otto/assistants/kitchen_sink/: __init__.py  tools.py
otto/assistants/test/: __init__.py  test_assistant_sync.py
otto/assistants/test/dummy_assistant/: __init__.py
otto/assistants/test/module_tools_assistant/: __init__.py
otto/assistants/tests/: simple_tool.py  test_assistants_sync.py
otto/assistants/tests/dummy_assistant/: __init__.py
otto/assistants/tests/mixed_tools_assistant/: __init__.py
otto/assistants/tests/module_tools_assistant/: __init__.py
otto/assistants/tests/string_tools_assistant/: __init__.py
otto/assistants/ui_tester/: __init__.py
otto/commands/: __init__.py  utils.py
otto/commands/typegen/: __init__.py  api.py  common.py  doctype.py  exported.py  pydantic.py  test_typegen.py  utils.py
otto/config/: desktop.py
otto/fixtures/: otto_llm.json
otto/lib/: README.md  __init__.py  errors.py  model.py  session.py  types.py  utils.py
otto/lib/docs/: README.md  model.md  session.md  utilities.md
otto/lib/tests/: test_model.py  test_session.py  utils.py
otto/llm/: __init__.py  format.py  litellm.py  types.py  utils.py
otto/llm/test_llm/: test_litellm.py  utils.py
otto/otto/doctype/otto_assistant/: otto_assistant.js  otto_assistant.json  otto_assistant.py  test_otto_assistant.py
otto/otto/report/: README.md  utils.py
otto/prompts/: title.py
otto/public/: node_modules
otto/templates/emails/: base.html  email.css  otto_permission_request.html  style.css  tailwind.config.js
otto/tests/: test_assistants.py
otto/tools/: README.md  __init__.py  bash_tool.py  types.py
otto/tools/bash_tool/: __init__.py
otto/tools/tests/: add_tool.py  dev_tool.py  multiply_tool.py  test_tools_sync.py
otto/utils/: __init__.py  cache.py  execute.py  file.py  imports.py  lock.py  notify.py  typing.py
otto/utils/tests/: test_imports.py
otto/www/: otto_feedback.html  otto_feedback.js  otto_feedback.py  test_page.html
otto/www/otto/: index.html  index.py
otto/www/otto_feedback/: index.css  index.html  index.js  index.py
templates/emails/: base.html  macros.html
(+197 files in other folders)
